discussion/kv_engine/129645/129645_rev40_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Add support for ifconfig commands [2.0/3]

This patch contains the implementation for the ifconfig
commands (and a unit test suite which tests them).

It is currently not possible to fully use the new commands
as it is in "conflict" with the normal config reload (it'll
give you undefined behavior as it might drop and open ports
etc).

Change-Id: I56eea6cbcb2e0d4b073f4247c29d7308dc40d67b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-07 11:58:21.000000000
Message: 
Uploaded patch set 40: Patch Set 39 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-07 12:05:39.000000000
Message: 
Patch Set 40: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8177/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/protocol/mcbp/opcode.cc:932:13: error: enumeration value "Ifconfig" not handled in switch [clang-diagnostic-switch]
    switch (opcode) {
            ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/unique_ptr.h:821:34: error: allocating an object of abstract class type "ServerSocket" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/network_interface_manager.cc:497:39: note: in instantiation of function template specialization "std::make_unique<ServerSocket, int &, event_base *, std::shared_ptr<ListeningPort> &>" requested here
        listen_conn.emplace_back(std::make_unique<ServerSocket>(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:45:34: note: unimplemented pure virtual method "getInterfaceDescription" in "ServerSocket"
    virtual const ListeningPort& getInterfaceDescription() const = 0;
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:48:18: note: unimplemented pure virtual method "updateSSL" in "ServerSocket"
    virtual void updateSSL(const std::string& key, const std::string& cert) = 0;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:54:28: note: unimplemented pure virtual method "toJson" in "ServerSocket"
    virtual nlohmann::json toJson() const = 0;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.h:56:32: note: unimplemented pure virtual method "getUuid" in "ServerSocket"
    virtual const std::string& getUuid() const = 0;
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8177/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/protocol/mcbp/opcode.cc:932:13:
error: enumeration value "Ifconfig" not handled in switch [clang-diagnostic-switch]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8177/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6721/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
